--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             android:label="@string/title_activity_gurps"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
+        <activity android:name=".diceEmulator" >
+        </activity>
     </application>
 
 </manifest>
