Fixed the char sheet up a bit. Added a monster list (now to dynamically add monsters as the user requests.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
             android:label="@string/title_activity_gurps_navigator"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
+        <activity android:name=".Monsters" >
+        </activity>
     </application>
 
 </manifest>
