--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,13 @@
         <activity
             android:name=".Adds"
             android:label="@string/title_activity_adds"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".LootNavigator" />
+        <activity android:name=".weaponList" />
+        <activity android:name=".armorList" />
+        <activity
+            android:name=".editWeapon"
+            android:label="@string/title_activity_edit_weapon"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
