--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
             android:name=".editWeapon"
             android:label="@string/title_activity_edit_weapon"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Characters"/>
     </application>
 
 </manifest>
